--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700;800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/237bc6f334.js" crossorigin="anonymous"></script>
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+</style>
+
 </head>
+
 
 <body>
     <header>
 
-        <section>
+        <section class="section0">
             <nav class="containerNav">
 
                 <div>
@@ -32,9 +37,9 @@
             </nav>
 
             <div class="containerNav">
-                <ul>
+                <ul class="UL-s0">
                     <h1><img src="../Pedimon/img/pedimon-text.png" alt="pedimon-text"></h1>
-                    <p>No te pierdas la Oportunidad de comprar
+                    <p >No te pierdas la Oportunidad de comprar
                         tu pokemon con Iv's y stats perfectas!</p>
                     <button class="BotonUL">GOTTA CATCH EM ALL!</button>
                 </ul>
@@ -46,23 +51,23 @@
 
     </header>
 
-    <section class="section">
+    <section class="section1">
         <div class="Titulos">
-            <h1>¡NO TE QUEDES SIN TU PEDIMON!</h1>
+            <h1 class="h1secion">¡NO TE QUEDES SIN TU PEDIMON!</h1>
             <h3>AHORRATE HORAS ENTRENANDOLO POR TU PROPIA CUENTA</h3>
         </div>
         <div class="container">
             <div class="tarjeta1">
                 <img src="../Pedimon/img/info-icon-1.png" alt="Elemento agua">
-                <p>Elegi tu chimpokomon aca abajo crack!</p>
+                <p style="color: whitesmoke;">Elegi tu chimpokomon aca abajo crack!</p>
             </div>
             <div class="tarjeta2">
                 <img src="../Pedimon/img/info-icon-2.png" alt="Elemento agua">
-                <p>Elegi tu chimpokomon aca abajo crack!</p>
+                <p style="color: whitesmoke;">Elegi tu chimpokomon aca abajo crack!</p>
             </div>
             <div class="tarjeta3">
                 <img src="../Pedimon/img/info-icon-3.png" alt="Elemento agua">
-                <p>Elegi tu chimpokomon aca abajo crack!</p>
+                <p style="color: whitesmoke;">Elegi tu chimpokomon aca abajo crack!</p>
             </div>
         </div>
     </section>
