se agrego section2 y buycard

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700;800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/237bc6f334.js" crossorigin="anonymous"></script>
-<style>
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-</style>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+    </style>
 
 </head>
 
@@ -39,9 +39,11 @@
             <div class="containerNav">
                 <ul class="UL-s0">
                     <h1><img src="../Pedimon/img/pedimon-text.png" alt="pedimon-text"></h1>
-                    <p >No te pierdas la Oportunidad de comprar
+                    <p>No te pierdas la Oportunidad de comprar
                         tu pokemon con Iv's y stats perfectas!</p>
-                    <button class="BotonUL">GOTTA CATCH EM ALL!</button>
+                    <button class="BotonUL">
+                        GOTTA CATCH EM ALL!
+                    </button>
                 </ul>
 
                 <img src="../Pedimon/img/pikachu-hero.png" alt="pikachu-hero">
@@ -70,6 +72,45 @@
                 <p style="color: whitesmoke;">Elegi tu chimpokomon aca abajo crack!</p>
             </div>
         </div>
+    </section>
+
+    <section class="section2">
+        <div class="Titulos">
+            <h1 class="h1secion">Los MAS VENDIDOS</h1>
+        </div>
+        <div class="container2">
+            <div class="Buycard1">
+                <img src="" alt="Foto de Chimpokomon">
+                <h2>Nombre del pokemon</h2>
+                <button class="Boton">COMPRAR</button>
+            </div>
+            <div class="Buycard1">
+                <img src="" alt="Foto de Chimpokomon">
+                <h2>Nombre del pokemon</h2>
+                <button class="Boton">COMPRAR</button>
+            </div>
+            <div class="Buycard1">
+                <img src="" alt="Foto de Chimpokomon">
+                <h2>Nombre del pokemon</h2>
+                <button class="Boton">COMPRAR</button>
+            </div>
+            <div class="Buycard1">
+                <img src="" alt="Foto de Chimpokomon">
+                <h2>Nombre del pokemon</h2>
+                <button class="Boton">COMPRAR</button>
+            </div>
+            <div class="Buycard1">
+                <img src="" alt="Foto de Chimpokomon">
+                <h2>Nombre del pokemon</h2>
+                <button class="Boton">COMPRAR</button>
+            </div>
+            <div class="Buycard1">
+                <img src="" alt="Foto de Chimpokomon">
+                <h2>Nombre del pokemon</h2>
+                <button class="Boton">COMPRAR</button>
+            </div>
+        </div>
+
     </section>
 
     <footer>
