agregue BK-img, falta pulir el footer y el burguer menu al comprar algo

--- a/index.html
+++ b/index.html
@@ -52,68 +52,92 @@
         </section>
 
     </header>
+    <main class="main">
+        <section class="section1">
+            <div class="Titulos">
+                <h1 class="h1secion">¡NO TE QUEDES SIN TU PEDIMON!</h1>
+                <h3>AHORRATE HORAS ENTRENANDOLO POR TU PROPIA CUENTA</h3>
+            </div>
+            <div class="container">
+                <div class="tarjeta1">
+                    <img src="../Pedimon/img/info-icon-1.png" alt="Elemento agua">
+                    <p style="color: whitesmoke;">Elegi tu chimpokomon aca abajo crack!</p>
+                </div>
+                <div class="tarjeta2">
+                    <img src="../Pedimon/img/info-icon-2.png" alt="Elemento agua">
+                    <p style="color: whitesmoke;">Elegi tu chimpokomon aca abajo crack!</p>
+                </div>
+                <div class="tarjeta3">
+                    <img src="../Pedimon/img/info-icon-3.png" alt="Elemento agua">
+                    <p style="color: whitesmoke;">Elegi tu chimpokomon aca abajo crack!</p>
+                </div>
+            </div>
+        </section>
 
-    <section class="section1">
-        <div class="Titulos">
-            <h1 class="h1secion">¡NO TE QUEDES SIN TU PEDIMON!</h1>
-            <h3>AHORRATE HORAS ENTRENANDOLO POR TU PROPIA CUENTA</h3>
-        </div>
-        <div class="container">
-            <div class="tarjeta1">
-                <img src="../Pedimon/img/info-icon-1.png" alt="Elemento agua">
-                <p style="color: whitesmoke;">Elegi tu chimpokomon aca abajo crack!</p>
+        <section class="section2">
+            <div class="Titulos">
+                <h1 class="h1secion">Los MAS VENDIDOS</h1>
             </div>
-            <div class="tarjeta2">
-                <img src="../Pedimon/img/info-icon-2.png" alt="Elemento agua">
-                <p style="color: whitesmoke;">Elegi tu chimpokomon aca abajo crack!</p>
+            <div class="container2">
+                <div class="Buycard1">
+                    <img src="" alt="Foto de Chimpokomon">
+                    <h2>Nombre del pokemon</h2>
+                    <button class="Boton">COMPRAR</button>
+                </div>
+                <div class="Buycard1">
+                    <img src="" alt="Foto de Chimpokomon">
+                    <h2>Nombre del pokemon</h2>
+                    <button class="Boton">COMPRAR</button>
+                </div>
+                <div class="Buycard1">
+                    <img src="" alt="Foto de Chimpokomon">
+                    <h2>Nombre del pokemon</h2>
+                    <button class="Boton">COMPRAR</button>
+                </div>
+                <div class="Buycard1">
+                    <img src="" alt="Foto de Chimpokomon">
+                    <h2>Nombre del pokemon</h2>
+                    <button class="Boton">COMPRAR</button>
+                </div>
+                <div class="Buycard1">
+                    <img src="" alt="Foto de Chimpokomon">
+                    <h2>Nombre del pokemon</h2>
+                    <button class="Boton">COMPRAR</button>
+                </div>
+                <div class="Buycard1">
+                    <img src="" alt="Foto de Chimpokomon">
+                    <h2>Nombre del pokemon</h2>
+                    <button class="Boton">COMPRAR</button>
+                </div>
             </div>
-            <div class="tarjeta3">
-                <img src="../Pedimon/img/info-icon-3.png" alt="Elemento agua">
-                <p style="color: whitesmoke;">Elegi tu chimpokomon aca abajo crack!</p>
-            </div>
-        </div>
-    </section>
 
-    <section class="section2">
-        <div class="Titulos">
-            <h1 class="h1secion">Los MAS VENDIDOS</h1>
-        </div>
-        <div class="container2">
-            <div class="Buycard1">
-                <img src="" alt="Foto de Chimpokomon">
-                <h2>Nombre del pokemon</h2>
-                <button class="Boton">COMPRAR</button>
-            </div>
-            <div class="Buycard1">
-                <img src="" alt="Foto de Chimpokomon">
-                <h2>Nombre del pokemon</h2>
-                <button class="Boton">COMPRAR</button>
-            </div>
-            <div class="Buycard1">
-                <img src="" alt="Foto de Chimpokomon">
-                <h2>Nombre del pokemon</h2>
-                <button class="Boton">COMPRAR</button>
-            </div>
-            <div class="Buycard1">
-                <img src="" alt="Foto de Chimpokomon">
-                <h2>Nombre del pokemon</h2>
-                <button class="Boton">COMPRAR</button>
-            </div>
-            <div class="Buycard1">
-                <img src="" alt="Foto de Chimpokomon">
-                <h2>Nombre del pokemon</h2>
-                <button class="Boton">COMPRAR</button>
-            </div>
-            <div class="Buycard1">
-                <img src="" alt="Foto de Chimpokomon">
-                <h2>Nombre del pokemon</h2>
-                <button class="Boton">COMPRAR</button>
-            </div>
-        </div>
-
-    </section>
+        </section>
+    </main>
 
     <footer>
+        <div class="footer">
+            <div class="Titulos">
+                <h1>
+                    <img src="../Pedimon/img/pedimon-text-white.png" alt="Pedimon">
+                </h1>
+            </div>
+            <div class="container-footer">
+                <ul class="ul-footer">
+                    <h2>CONTACTO</h2>
+                    <li><i class="fab fa-affiliatetheme"></i>4222-2222</li>
+                    <li><i class="fas fa-house-user"></i>Calle falsa 123</li>
+                </ul>
+                <ul>
+                    <h2>LEGALES</h2>
+                    <p>Ante cualquier problema cantarle a Gardel o tocar la pokeflauta,
+                        saracasaracasaaaaa saaaaaaaaaaaa sasaaasasaaaaa.
+                    </p>
+                </ul>
+            </div>
+            <div class="container-footer">
+
+            </div>
+        </div>
 
     </footer>
 
