falta centrar los cinonos del footer y el burguer menu al comprar

--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
             </div>
             <div class="container">
                 <div class="tarjeta1">
-                    <img src="../Pedimon/img/info-icon-1.png" alt="Elemento agua">
+                    <img src="../Pedimon/img/info-icon-1.png" alt="Tipo agua">
                     <p style="color: whitesmoke;">Elegi tu chimpokomon aca abajo crack!</p>
                 </div>
                 <div class="tarjeta2">
-                    <img src="../Pedimon/img/info-icon-2.png" alt="Elemento agua">
+                    <img src="../Pedimon/img/info-icon-2.png" alt="Tipo trueno">
                     <p style="color: whitesmoke;">Elegi tu chimpokomon aca abajo crack!</p>
                 </div>
                 <div class="tarjeta3">
-                    <img src="../Pedimon/img/info-icon-3.png" alt="Elemento agua">
+                    <img src="../Pedimon/img/info-icon-3.png" alt="Tipo fuego">
                     <p style="color: whitesmoke;">Elegi tu chimpokomon aca abajo crack!</p>
                 </div>
             </div>
@@ -80,33 +80,33 @@
             </div>
             <div class="container2">
                 <div class="Buycard1">
-                    <img src="" alt="Foto de Chimpokomon">
-                    <h2>Nombre del pokemon</h2>
+                    <img class="img-buycard" src="../Pedimon/img/Pikachu.png" alt="Foto de Chimpokomon">
+                    <h2>Pikachu</h2>
                     <button class="Boton">COMPRAR</button>
                 </div>
-                <div class="Buycard1">
-                    <img src="" alt="Foto de Chimpokomon">
-                    <h2>Nombre del pokemon</h2>
+                 <div class="Buycard2">
+                    <img class="img-buycard" src="../Pedimon/img/Chorizard.png" alt="Foto de Chimpokomon">
+                    <h2>Charizard</h2>
                     <button class="Boton">COMPRAR</button>
                 </div>
-                <div class="Buycard1">
-                    <img src="" alt="Foto de Chimpokomon">
-                    <h2>Nombre del pokemon</h2>
+                <div class="Buycard3">
+                    <img class="img-buycard" src="../Pedimon/img/vamo a calmarno.png" alt="Foto de Chimpokomon">
+                    <h2>Squirtle</h2>
                     <button class="Boton">COMPRAR</button>
                 </div>
-                <div class="Buycard1">
-                    <img src="" alt="Foto de Chimpokomon">
-                    <h2>Nombre del pokemon</h2>
+                <div class="Buycard4">
+                    <img class="img-buycard" src="../Pedimon/img/venusaur.png" alt="Foto de Chimpokomon">
+                    <h2>Venusaur</h2>
                     <button class="Boton">COMPRAR</button>
                 </div>
-                <div class="Buycard1">
-                    <img src="" alt="Foto de Chimpokomon">
-                    <h2>Nombre del pokemon</h2>
+                 <div class="Buycard5">
+                    <img  class="img-buycard" src="../Pedimon/img/totodile.png" alt="Foto de Chimpokomon">
+                    <h2>Totodile</h2>
                     <button class="Boton">COMPRAR</button>
                 </div>
-                <div class="Buycard1">
-                    <img src="" alt="Foto de Chimpokomon">
-                    <h2>Nombre del pokemon</h2>
+                <div class="Buycard6">
+                    <img class="img-buycard" src="../Pedimon/img/typhlosion.png" alt="Foto de Chimpokomon">
+                    <h2>Typhlosion</h2>
                     <button class="Boton">COMPRAR</button>
                 </div>
             </div>
@@ -127,15 +127,18 @@
                     <li><i class="fab fa-affiliatetheme"></i>4222-2222</li>
                     <li><i class="fas fa-house-user"></i>Calle falsa 123</li>
                 </ul>
-                <ul>
+                <ul class="ul-footer">
                     <h2>LEGALES</h2>
                     <p>Ante cualquier problema cantarle a Gardel o tocar la pokeflauta,
                         saracasaracasaaaaa saaaaaaaaaaaa sasaaasasaaaaa.
                     </p>
                 </ul>
             </div>
-            <div class="container-footer">
-
+            <div class="iconos">
+               <i class="fab fa-instagram"></i>
+               <i class="fab fa-facebook-square"></i>
+               <i class="fab fa-whatsapp-square"></i>
+               <i class="fab fa-twitter-square"></i>
             </div>
         </div>
 
