--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
                 </ul>
             </div>
             <div class="iconos">
-               <i class="fab fa-instagram"></i>
-               <i class="fab fa-facebook-square"></i>
-               <i class="fab fa-whatsapp-square"></i>
-               <i class="fab fa-twitter-square"></i>
+               <i class="fab fa-instagram" style="font-size: 2em; margin: 3px;"></i>
+               <i class="fab fa-facebook-square" style="font-size: 2em; margin: 3px;"></i>
+               <i class="fab fa-whatsapp-square" style="font-size: 2em; margin: 3px;"></i>
+               <i class="fab fa-twitter-square" style="font-size: 2em; margin: 3px;"></i>
             </div>
         </div>
 
