falta el burguer menu y JS

--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
         <section class="section0">
             <nav class="containerNav">
 
-                <div>
-                    <img class="IconoPokemon" src="../Pedimon/img/pedimon-logo.png" alt="Pokemon">
-                </div>
-
-                <div>
+        
+                <img class="IconoPokemon" src="../Pedimon/img/pedimon-logo.png" alt="Pokemon">
+                
+                <div class="divNAV">
                     <button class="BotonNav">ABOUT</button>
                     <button class="BotonNav">CONTACT</button>
                     <button class="BotonNav">CARRITO</button>
@@ -36,9 +35,9 @@
 
             </nav>
 
-            <div class="containerNav">
+            <div class="containerSlider">
                 <ul class="UL-s0">
-                    <h1><img src="../Pedimon/img/pedimon-text.png" alt="pedimon-text"></h1>
+                    <h1><img class="imgSlider1" src="../Pedimon/img/pedimon-text.png" alt="pedimon-text"></h1>
                     <p>No te pierdas la Oportunidad de comprar
                         tu pokemon con Iv's y stats perfectas!</p>
                     <button class="BotonUL">
@@ -46,7 +45,7 @@
                     </button>
                 </ul>
 
-                <img src="../Pedimon/img/pikachu-hero.png" alt="pikachu-hero">
+                <img class="imgSlider2" src="../Pedimon/img/pikachu-hero.png" alt="pikachu-hero">
                 </img>
             </div>
         </section>
@@ -118,7 +117,7 @@
         <div class="footer">
             <div class="Titulos">
                 <h1>
-                    <img src="../Pedimon/img/pedimon-text-white.png" alt="Pedimon">
+                    <img class="imgfooter" src="../Pedimon/img/pedimon-text-white.png" alt="Pedimon">
                 </h1>
             </div>
             <div class="container-footer">
