falta que JS traiga y pinte

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <button class="nav-toggle">
                        <i class="fas fa-shopping-cart" style="font-size: 2em;"></i>
                     </button>
-                    <ul class="ulBuy ulBuy-visible">
+                    <ul class="ulBuy ">
                         <li class="liBuy">pokemon x $9999</li>
                         <li class="liBuy">pokemon x $9999</li>
                         <li class="liBuy">pokemon x $9999</li>
