--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <div class="containerSlider">
                 <ul class="UL-s0">
-                    <h1><img class="imgSlider1" src="Pedimon/img/pedimon-text.png" alt="pedimon-text"></h1>
+                    <h1><img class="imgSlider1" src="./img/pedimon-text.png" alt="pedimon-text"></h1>
                     <p>No te pierdas la Oportunidad de comprar
                         tu pokemon con Iv's y stats perfectas!</p>
                     <button class="BotonUL">
