--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             
         <nav class="containerNav">
 
-        <img class="IconoPokemon" src="../Pedimon/img/pedimon-logo.png" alt="Pokemon">
+        <img class="IconoPokemon" src="./img/pedimon-logo.png" alt="Pokemon">
                 
                 <div class="divNAV">
                     <button class="BotonNav">ABOUT</button>
@@ -53,7 +53,7 @@
                     </button>
                 </ul>
 
-                <img class="imgSlider2" src="../Pedimon/img/pikachu-hero.png" alt="pikachu-hero">
+                <img class="imgSlider2" src="./img/pikachu-hero.png" alt="pikachu-hero">
                 </img>
             </div>
     </header>
@@ -65,15 +65,15 @@
             </div>
             <div class="container">
                 <div class="tarjeta1">
-                    <img src="../Pedimon/img/info-icon-1.png" alt="Tipo agua">
+                    <img src="./mg/info-icon-1.png" alt="Tipo agua">
                     <p style="color: whitesmoke;">Elegi tu chimpokomon aca abajo crack!</p>
                 </div>
                 <div class="tarjeta2">
-                    <img src="../Pedimon/img/info-icon-2.png" alt="Tipo trueno">
+                    <img src="./img/info-icon-2.png" alt="Tipo trueno">
                     <p style="color: whitesmoke;">Elegi tu chimpokomon aca abajo crack!</p>
                 </div>
                 <div class="tarjeta3">
-                    <img src="../Pedimon/img/info-icon-3.png" alt="Tipo fuego">
+                    <img src="./img/info-icon-3.png" alt="Tipo fuego">
                     <p style="color: whitesmoke;">Elegi tu chimpokomon aca abajo crack!</p>
                 </div>
             </div>
@@ -85,32 +85,32 @@
             </div>
             <div class="container2">
                 <div class="Buycard1">
-                    <img class="img-buycard" src="../Pedimon/img/Pikachu.png" alt="Foto de Chimpokomon">
+                    <img class="img-buycard" src="./img/Pikachu.png" alt="Foto de Chimpokomon">
                     <h2>Pikachu</h2>
                     <button class="Boton">COMPRAR</button>
                 </div>
                  <div class="Buycard2">
-                    <img class="img-buycard" src="../Pedimon/img/Chorizard.png" alt="Foto de Chimpokomon">
+                    <img class="img-buycard" src="./img/Chorizard.png" alt="Foto de Chimpokomon">
                     <h2>Charizard</h2>
                     <button class="Boton">COMPRAR</button>
                 </div>
                 <div class="Buycard3">
-                    <img class="img-buycard" src="../Pedimon/img/vamo a calmarno.png" alt="Foto de Chimpokomon">
+                    <img class="img-buycard" src="./img/vamo a calmarno.png" alt="Foto de Chimpokomon">
                     <h2>Squirtle</h2>
                     <button class="Boton">COMPRAR</button>
                 </div>
                 <div class="Buycard4">
-                    <img class="img-buycard" src="../Pedimon/img/venusaur.png" alt="Foto de Chimpokomon">
+                    <img class="img-buycard" src="./img/venusaur.png" alt="Foto de Chimpokomon">
                     <h2>Venusaur</h2>
                     <button class="Boton">COMPRAR</button>
                 </div>
                  <div class="Buycard5">
-                    <img  class="img-buycard" src="../Pedimon/img/totodile.png" alt="Foto de Chimpokomon">
+                    <img  class="img-buycard" src="./img/totodile.png" alt="Foto de Chimpokomon">
                     <h2>Totodile</h2>
                     <button class="Boton">COMPRAR</button>
                 </div>
                 <div class="Buycard6">
-                    <img class="img-buycard" src="../Pedimon/img/typhlosion.png" alt="Foto de Chimpokomon">
+                    <img class="img-buycard" src="./img/typhlosion.png" alt="Foto de Chimpokomon">
                     <h2>Typhlosion</h2>
                     <button class="Boton">COMPRAR</button>
                 </div>
@@ -123,7 +123,7 @@
         <div class="footer">
             <div class="Titulos">
                 <h1>
-                    <img class="imgfooter" src="../Pedimon/img/pedimon-text-white.png" alt="Pedimon">
+                    <img class="imgfooter" src="./img/pedimon-text-white.png" alt="Pedimon">
                 </h1>
             </div>
             <div class="container-footer">
