--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             <div class="container">
                 <div class="tarjeta1">
-                    <img src="./mg/info-icon-1.png" alt="Tipo agua">
+                    <img src="./img/info-icon-1.png" alt="Tipo agua">
                     <p style="color: whitesmoke;">Elegi tu chimpokomon aca abajo crack!</p>
                 </div>
                 <div class="tarjeta2">
