--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </ul>
                 <ul class="ul-footer">
                     <h2>LEGALES</h2>
-                    <p>Ante cualquier problema cantarle a Gardel o tocar la pokeflauta,
+                    <p class="Pfooter">Ante cualquier problema cantarle a Gardel o tocar la pokeflauta,
                         saracasaracasaaaaa saaaaaaaaaaaa sasaaasasaaaaa.
                     </p>
                 </ul>
