se corrigio detalles en footer y seccion 0

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
             <div class="container-footer">
                 <ul class="ul-footer">
                     <h2>CONTACTO</h2>
-                    <li><i class="fab fa-affiliatetheme"></i>4222-2222</li>
-                    <li><i class="fas fa-house-user"></i>Calle falsa 123</li>
+                    <li class="LiFooter"><i class="fab fa-affiliatetheme"></i>4222-2222</li>
+                    <li class="LiFooter"><i class="fas fa-house-user"></i>Calle falsa 123</li>
                 </ul>
                 <ul class="ul-footer">
                     <h2>LEGALES</h2>
