falta agregar el resto de los pokemons

--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
                     <button class="nav-toggle">
                        <i class="fas fa-shopping-cart" style="font-size: 2em;"></i>
                     </button>
-                    <ul class="ulBuy ">
-                        <li class="liBuy">pokemon x $9999</li>
-                        <li class="liBuy">pokemon x $9999</li>
-                        <li class="liBuy">pokemon x $9999</li>
+                    <ul class="ulBuy" id="carrito">
+                        <!-- <li class="liBuy">Sin pokemones en el Carrito</li> -->
                     </ul>
                     
                 </div>
@@ -87,32 +85,32 @@
                 <div class="Buycard1">
                     <img class="img-buycard" src="./img/Pikachu.png" alt="Foto de Chimpokomon">
                     <h2>Pikachu</h2>
-                    <button class="Boton">COMPRAR</button>
+                    <button class="Boton" onclick="agragarAlCarrito('pikachu')">AGREGAR</button>
                 </div>
                  <div class="Buycard2">
                     <img class="img-buycard" src="./img/Chorizard.png" alt="Foto de Chimpokomon">
                     <h2>Charizard</h2>
-                    <button class="Boton">COMPRAR</button>
+                    <button class="Boton" onclick="agragarAlCarrito('charizard')">AGREGAR</button>
                 </div>
                 <div class="Buycard3">
                     <img class="img-buycard" src="./img/vamo a calmarno.png" alt="Foto de Chimpokomon">
                     <h2>Squirtle</h2>
-                    <button class="Boton">COMPRAR</button>
+                    <button class="Boton">AGREGAR</button>
                 </div>
                 <div class="Buycard4">
                     <img class="img-buycard" src="./img/venusaur.png" alt="Foto de Chimpokomon">
                     <h2>Venusaur</h2>
-                    <button class="Boton">COMPRAR</button>
+                    <button class="Boton">AGREGAR</button>
                 </div>
                  <div class="Buycard5">
                     <img  class="img-buycard" src="./img/totodile.png" alt="Foto de Chimpokomon">
                     <h2>Totodile</h2>
-                    <button class="Boton">COMPRAR</button>
+                    <button class="Boton">AGREGAR</button>
                 </div>
                 <div class="Buycard6">
                     <img class="img-buycard" src="./img/typhlosion.png" alt="Foto de Chimpokomon">
                     <h2>Typhlosion</h2>
-                    <button class="Boton">COMPRAR</button>
+                    <button class="Boton">AGREGAR</button>
                 </div>
             </div>
 
