faltaria agregar detalles en JS como boton para borrar compra

--- a/index.html
+++ b/index.html
@@ -95,22 +95,22 @@
                 <div class="Buycard3">
                     <img class="img-buycard" src="./img/vamo a calmarno.png" alt="Foto de Chimpokomon">
                     <h2>Squirtle</h2>
-                    <button class="Boton">AGREGAR</button>
+                    <button class="Boton" onclick="agragarAlCarrito('Squirtle')">AGREGAR</button>
                 </div>
                 <div class="Buycard4">
                     <img class="img-buycard" src="./img/venusaur.png" alt="Foto de Chimpokomon">
                     <h2>Venusaur</h2>
-                    <button class="Boton">AGREGAR</button>
+                    <button class="Boton" onclick="agragarAlCarrito('Venasaur')">AGREGAR</button>
                 </div>
                  <div class="Buycard5">
                     <img  class="img-buycard" src="./img/totodile.png" alt="Foto de Chimpokomon">
                     <h2>Totodile</h2>
-                    <button class="Boton">AGREGAR</button>
+                    <button class="Boton" onclick="agragarAlCarrito('Totodile')">AGREGAR</button>
                 </div>
                 <div class="Buycard6">
                     <img class="img-buycard" src="./img/typhlosion.png" alt="Foto de Chimpokomon">
                     <h2>Typhlosion</h2>
-                    <button class="Boton">AGREGAR</button>
+                    <button class="Boton" onclick="agragarAlCarrito('Typhlosion')">AGREGAR</button>
                 </div>
             </div>
 
